[package]
name = "secrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
redis = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"]}
actix-cors = "0.6.4"